# Project-Armada

./: .gitignore  .gitmodules  CMakeLists.txt  FUNCTIONS.md  Makefile  README.md  RELEASE_NOTES.md  build.bat  build.sh
.github/workflows/: build.yml
include/client/: client_api.h  main.h  tui_bridge.h  ui_notifications.h
include/common/: client_api.h  events.h  game_types.h  server_api.h
include/networking/: net_platform.h  network.h
include/server/: main.h  server_api.h
src/: main.c  main.cpp
src/client/: client.c  launcher.cpp  main.c  ui_notifications.cpp
src/networking/: client.c  network.c  server.c
src/server/: main.c  server.c
src/ui/: launcher.cpp  ui_notifications.cpp
